шардироваание и диалоги
